# qindo

./: README.md
be/: CMakeLists.txt
be/gamesvr/: CMakeLists.txt  game_svr.cpp  game_svr.h  main.cpp
be/libsrc/: CMakeLists.txt
be/libsrc/qapp/: qapp.cpp  qapp.h
